0.17.2
 - fix: not all resource name edits were recognized in upload dialog (#84)
 - fix: check for existence of DC resources before starting uploads (#85)
 - enh: sort resources according to internal basin dependencies (#79)
 - enh: warn user about too many resources in a dataset (#86)
 - ref: use more f-strings
 - ref: add `common.is_dc_file` for consistent resource checks
0.17.1
 - fix: found culprit of regular segmentation faults (#14)
 - reg: invalid use PyQt6 namespace after migration from PyQt5
0.17.0
 - BREAKING CHANGE: migrate codebase from PyQt5 to PyQt6
 - fix: automated user sign-up did not work for DCOR Playground
 - enh: detect DCOR maintenance mode
 - tests: allow to use different DCOR instance for testing
 - tests: make tests independent of testing user
0.16.11
 - fix: support CKAN 2.11 (authorization and status_show)
 - fix: implement non-functional `DownloadQueue.get_status`
 - docs: properly employ license GPL-3.0-or-later
0.16.10
 - enh: improve download job list initialization
 - docs: consistently rename API key to API token (code unchanged)
0.16.9
 - enh: don't use global `logging.basicConfig`
 - enh: setup INFO logging for `requests` (no more DEBUG logs)
 - ref: setup DEBUG/INFO logging for `dcoraid` and `dclab`
 - tests: avoid update check in custom GUI test
 - setup: bump dclab to 0.62.11
0.16.8
 - ci: maintenance release
0.16.7
 - ci: maintenance release
0.16.6
 - ci: maintenance release
0.16.5
 - ci: maintenance release
0.16.4
 - enh: limit logs printed to 2000
 - tests: wait for complete resource dict when uploading test data
 - ci: introduce SignPath code signing for Windows executables
 - setup: bump dclab to 0.62.10
0.16.3
 - fix: fall-back to resource size estimation via S3 download header
 - tests: fix tests that checked resource size after upload
0.16.2
 - fix: convert resource file extensions to lower-case (#81)
 - fix: escape html characters in logging panel