@@ -1,8 +1,10 @@
 0.17.2
  - fix: not all resource name edits were recognized in upload dialog (#84)
  - fix: check for existence of DC resources before starting uploads (#85)
+ - enh: functionalize resource name reset button (#84)
  - enh: sort resources according to internal basin dependencies (#79)
  - enh: warn user about too many resources in a dataset (#86)
+ - reg: do not always add directory name to resource name in upload dialog
  - ref: use more f-strings
  - ref: add `common.is_dc_file` for consistent resource checks
 0.17.1
